--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,4 +3,8 @@
   %title Viewer
   %link(href="stylesheets/main.css" rel="stylesheet" type="text/css")
 %body
-  #contaner= yield
+  #contaner
+    #header Viewer
+    #sidebar smth
+    #stuff= yield
+    #footer.clear
