--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,6 +1,6 @@
 body{
   margin:0;
-  font: 12pt "ubuntu-sans" sans-serif;
+  font: 10pt "verdana" sans-serif;
 }
 
 #contaner{
@@ -19,6 +19,7 @@ body{
   float: left;
   width: 150px;
   padding: 10px;
+  height: 100%;
 }
 
 #stuff{
@@ -28,4 +29,20 @@ body{
 
 .clear{
   clear:both;
+}
+
+.comic img{
+  max-width: 200px;
+  float: left;
+}
+
+.pic{ float:left }
+
+.info{ 
+  float:left;
+  margin-left:15px;
+}
+
+.comic{
+  padding: 10px;
 }
