--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,8 +3,8 @@
   %title Viewer
   %link(href="stylesheets/main.css" rel="stylesheet" type="text/css")
 %body
-  #contaner
-    #header Viewer
-    #sidebar smth
-    #stuff= yield
-    #footer.clear
+  #contaner.shadow
+    #contaner1
+      #header Viewer
+      #stuff= yield
+      #footer.clear
