--- a/views/editor.haml
+++ b/views/editor.haml
@@ -1,3 +1,9 @@
-%editor
-  -comic.images.each do |path|
-    %img{src: path} 
+#editor
+  %img{src: comic.images[0]}
+  %form{ method: 'post'}
+    .label Edit description
+    %input{type: 'text', name: 'descr', value: comic.description, size: 10}
+    .label Edit tags
+    %input{type: 'text', name: 'tags', value: comic.tags_string}
+    %input{type: 'submit', value: 'submit'}  
+     
