--- a/views/index.haml
+++ b/views/index.haml
@@ -1,12 +1,17 @@
+#sidebar
+  #tag_cloud
+    -Tag.all.each do |tag|
+      %a{href: '#'}= tag.name
 #main
   -@comics.each do |comic|
     .comic
-      %img{src: comic.images[0]}
+      %a{href: "manga?id=#{comic.id}&e=read"}
+        %img{src: comic.images[0]}
       .info
         %h4= comic.title
         %p= comic.description if comic.respond_to?('description')
         .tags
-        -comic.tagged.each do |tag| 
-          %a{href: '#'}= tag.name
-        %a.add_tag{href: ('/reader/'+comic.id)} Add a tag  
+          -comic.all_tags.each do |tag| 
+            %a{href: '#'}= tag.name
+          %a.edit_button{href: "/manga?id=#{comic.id}&e=edit"} Edit entry
       .clear  
