--- a/views/reader.haml
+++ b/views/reader.haml
@@ -1,3 +1,8 @@
-%reader
+#menu
+  %a{ href: '/'} Main page
+  %a{ href:''} Prev
+  %a{ href: ''} Next
+  
+#reader
   -comic.images.each do |path|
     %img{src: path}
