--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,10 +1,20 @@
+@font-face {
+  font-family: "sing";
+  src: url("../fonts/sing.ttf");
+}
+
+@font-face {
+  font-family: "animeace";
+  src: url("../fonts/animeace.ttf");
+}
+
 body{
   margin:0;
-  font: 10pt "verdana" sans-serif;
+  font: 10pt "verdana";
 }
 
 #contaner{
-  margin: 20px auto auto;
+  margin: 20px auto 20px;
   width: 950px;
 	border: solid 1px;
 }
@@ -13,30 +23,26 @@ body{
   -moz-box-shadow:    3px 3px 2px 3px #ccc;
   -webkit-box-shadow: 3px 3px 2px 3px #ccc;
   box-shadow:         3px 3px 2px 3px #ccc;
-}
+}  
 
 #contaner1{
   margin: 40px 40px 40px 70px;
-	border: solid 1px;
-}  
+}
 
 #header{
- height: 300px;
+  padding: 20px;
+  font: 100px "sing";
 }
 
 #sidebar{
   float: left;
-  width: 150px;
-  padding: 10px;
+  width: 200px;
   height: 100%;
 }
 
-#stuff{
-}
-
 #main{
-  padding:10px;
   float: left;
+  width:596px;
 }
 
 .clear{
@@ -44,7 +50,7 @@ body{
 }
 
 .comic img{
-  max-width: 200px;
+  max-height: 190px;
   float: left;
 }
 
@@ -56,7 +62,7 @@ body{
 }
 
 .comic{
-  padding: 10px;
+  width: inherit;
 }
 
 #editor img{
@@ -65,4 +71,80 @@ body{
 
 #reader img{
   max-width: 100%;
+}
+
+#editor img{
+  max-width: 200px;
+}
+
+#tag_cloud{
+  height: 200px;
+	font-size: 14pt;
+}
+
+#tag_cloud a{
+  display: inline-block;
+  height: 2em;  
+}
+
+.frame{
+  padding: 10px;
+  border: solid 2px;
+  margin: 10px; 
+  font: 10pt "animeace";
+}
+
+#menu{
+  text-align: justify;
+  padding: 0 10px;
+}
+
+#menu .but{
+  display: inline-block;
+  border: 2px solid;
+  width: 150px;
+  text-align: center;
+}
+
+.but a{
+  display: inline-block;
+  color:black;
+  background: white;
+  font: 25pt "sing";
+  text-decoration: none;
+  width: 100%;
+}
+
+.but a:hover{
+  color: white;
+  background: black;
+}
+
+.but_hack{ 
+  content: ".";
+  display: inline-block;
+  width: 100%;
+  height: 0;
+  visibility: hidden;
+}
+
+/* index frames */
+
+#c1{
+  height: 295px;
+  float: left;
+  width: 210px;
+}
+
+#r1{
+  float: left;
+  width: 585px;
+}
+
+#c2{
+  height: 130px;
+}
+
+#c3{
+  height: 130px;
 }
